--- a/index.html
+++ b/index.html
@@ -7,25 +7,28 @@
     <title>Penguin Fashion</title>
     <!-- tailwind css -->
     <script src="https://cdn.tailwindcss.com"></script>
+
 </head>
 <body>
-    <header class="bg-orange-100 pt-28">
+    <header class="bg-orange-100 py-20">
         <!-- navbar -->
+
+        <!-- header banner -->
         <div class="container mx-auto">
-           <div class="flex">
+           <div class="text-center md:text-left md:flex justify-between items-center">
             <div>
-                <h1 class="uppercase "><span>Be the Penguins</span><span>of Winter</span></h1>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-                <button>Buy Now</button>
+                <h1 class="uppercase text-4xl md:text-7xl font-semibold"><span class="text-amber-400">Be the Penguins</span><br><span class="text-indigo-900">of Winter</span></h1>
+                <p class="my-5 text-slate-600">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+                <button class="bg-lime-600 py-2 px-4 text-white rounded border-none text-xl font-medium">Buy Now</button>
             </div>
-            <div>
+            <div class="mx-auto md:mx-0 mt-4 md:mt-0">
                 <img src="images/model.png" alt="">
             </div>
            </div>
         </div>
     </header>
-    <main>
-
+    <main class="container mx-auto">
+        
     </main>
     <footer>
 
