--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,29 +10,154 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
 </head>
+
 <body>
     <header class="bg-orange-100 py-20">
         <!-- navbar -->
 
         <!-- header banner -->
         <div class="container mx-auto">
-           <div class="text-center md:text-left md:flex justify-between items-center">
-            <div>
-                <h1 class="uppercase text-4xl md:text-7xl font-semibold"><span class="text-amber-400">Be the Penguins</span><br><span class="text-indigo-900">of Winter</span></h1>
-                <p class="my-5 text-slate-600">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-                <button class="bg-lime-600 py-2 px-4 text-white rounded border-none text-xl font-medium">Buy Now</button>
+            <div class="text-center md:text-left md:flex justify-between items-center">
+                <div>
+                    <h1 class="uppercase text-4xl md:text-7xl font-semibold"><span class="text-amber-400">Be the
+                            Penguins</span><br><span class="text-indigo-900">of Winter</span></h1>
+                    <p class="my-5 text-slate-600">Lorem Ipsum is simply dummy text of the printing and typesetting
+                        industry</p>
+                    <button
+                        class="uppercase bg-lime-600 py-2 px-4 text-white rounded border-none text-xl font-medium">Buy
+                        Now</button>
+                </div>
+                <div class="mx-auto md:mx-0 mt-4 md:mt-0">
+                    <img src="images/model.png" alt="">
+                </div>
             </div>
-            <div class="mx-auto md:mx-0 mt-4 md:mt-0">
-                <img src="images/model.png" alt="">
-            </div>
-           </div>
         </div>
     </header>
     <main class="container mx-auto">
-        
+        <section class="p-2">
+            <h1 class="uppercase text-2xl md:text-5xl my-12 font-semibold text-indigo-900">
+                women Jacket
+            </h1>
+
+            <div class="grid  grid-cols-1 md:grid-cols-3 gap-14">
+                <!-- women carn 1 -->
+                <div class="bg-white rounded-xl p-5 shadow-lg">
+                    <div class="flex justify-center">
+                        <img class="w-72 bg-slate-50 p-3 rounded-xl" src="images/jacket-1.png" alt="">
+                    </div>
+                    <h3 class="text-4xl font-semibold text-slate-900 mt-2">
+                        Yellow Coat Jacket 
+                    </h3>
+                    <p class="text-neutral-800 my-4">Lorem Ipsum is simply dummy text of the
+                        printing and typesetting industry.</p>
+                    <div class="flex justify-between">
+                        <h3 class="text-4xl font-medium text-amber-500">$234</h3>
+                        <button
+                            class="uppercase bg-lime-600 py-2 px-4 text-white rounded border-none text-xl font-medium">Buy
+                            Now</button>
+                    </div>
+                </div>
+                <!-- women carn 2 -->
+                <div class="bg-white rounded-xl p-5 shadow-lg">
+                    <div class="flex justify-center">
+                        <img class="w-72 bg-slate-50 p-3 rounded-xl" src="images/jacket-2.png" alt="">
+                    </div>
+                    <h3 class="text-4xl font-semibold text-slate-900 mt-2">
+                        Yellow Coat Jacket 
+                    </h3>
+                    <p class="text-neutral-800 my-4">Lorem Ipsum is simply dummy text of the
+                        printing and typesetting industry.</p>
+                    <div class="flex justify-between">
+                        <h3 class="text-4xl font-medium text-amber-500">$234</h3>
+                        <button
+                            class="uppercase bg-lime-600 py-2 px-4 text-white rounded border-none text-xl font-medium">Buy
+                            Now</button>
+                    </div>
+                </div>
+                <!-- women carn 3 -->
+                <div class="bg-white rounded-xl p-5 shadow-lg">
+                    <div class="flex justify-center">
+                        <img class="w-72 bg-slate-50 p-3 rounded-xl" src="images/jacket-3.png" alt="">
+                    </div>
+                    <h3 class="text-4xl font-semibold text-slate-900 mt-2">
+                        Yellow Coat Jacket 
+                    </h3>
+                    <p class="text-neutral-800 my-4">Lorem Ipsum is simply dummy text of the
+                        printing and typesetting industry.</p>
+                    <div class="flex justify-between">
+                        <h3 class="text-4xl font-medium text-amber-500">$234</h3>
+                        <button
+                            class="uppercase bg-lime-600 py-2 px-4 text-white rounded border-none text-xl font-medium">Buy
+                            Now</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+                <!-- men jacket -->
+        <section class="mt-16">
+            <h1 class="uppercase p-2 text-2xl md:text-5xl my-12 font-semibold text-indigo-900">
+                Men Jacket
+            </h1>
+
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-14">
+                <!-- men carn 1 -->
+                <div class="bg-white rounded-xl p-5 shadow-lg">
+                    <div class="flex justify-center">
+                        <img class="w-72 bg-slate-50 p-3 rounded-xl" src="images/jacket-4.png" alt="">
+                    </div>
+                    <h3 class="text-4xl font-semibold text-slate-900 mt-2">
+                        Yellow Coat Jacket 
+                    </h3>
+                    <p class="text-neutral-800 my-4">Lorem Ipsum is simply dummy text of the
+                        printing and typesetting industry.</p>
+                    <div class="flex justify-between">
+                        <h3 class="text-4xl font-medium text-amber-500">$234</h3>
+                        <button
+                            class="uppercase bg-lime-600 py-2 px-4 text-white rounded border-none text-xl font-medium">Buy
+                            Now</button>
+                    </div>
+                </div>
+                <!-- men carn 2 -->
+                <div class="bg-white rounded-xl p-5 shadow-lg">
+                    <div class="flex justify-center">
+                        <img class="w-72 bg-slate-50 p-3 rounded-xl" src="images/jacket-5.png" alt="">
+                    </div>
+                    <h3 class="text-4xl font-semibold text-slate-900 mt-2">
+                        Yellow Coat Jacket 
+                    </h3>
+                    <p class="text-neutral-800 my-4">Lorem Ipsum is simply dummy text of the
+                        printing and typesetting industry.</p>
+                    <div class="flex justify-between">
+                        <h3 class="text-4xl font-medium text-amber-500">$234</h3>
+                        <button
+                            class="uppercase bg-lime-600 py-2 px-4 text-white rounded border-none text-xl font-medium">Buy
+                            Now</button>
+                    </div>
+                </div>
+                <!-- men carn 3 -->
+                <div class="bg-white rounded-xl p-5 shadow-lg">
+                    <div class="flex justify-center">
+                        <img class="w-72 bg-slate-50 p-3 rounded-xl" src="images/jacket-6.png" alt="">
+                    </div>
+                    <h3 class="text-4xl font-semibold text-slate-900 mt-2">
+                        Yellow Coat Jacket 
+                    </h3>
+                    <p class="text-neutral-800 my-4">Lorem Ipsum is simply dummy text of the
+                        printing and typesetting industry.</p>
+                    <div class="flex justify-between">
+                        <h3 class="text-4xl font-medium text-amber-500">$234</h3>
+                        <button
+                            class="uppercase bg-lime-600 py-2 px-4 text-white rounded border-none text-xl font-medium">Buy
+                            Now</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
     <footer>
 
     </footer>
 </body>
+
 </html>
