--- a/index.html
+++ b/index.html
@@ -154,6 +154,42 @@
             </div>
         </section>
 
+        <!-- offer -->
+
+        <section class="my-20">
+            <div class="grid grid-cols-2 gap-8">
+                <div class="bg-white shadow-md flex p-3 items-center rounded-xl">
+                    <img class="w-20 h-20" src="images/house.png" alt="">
+                    <div class="ml-6">
+                        <h3 class="text-indigo-900 text-2xl font-semibold">Find the Perfect Fit</h3>
+                        <p class="text-gray-700">
+                            Everybody is different, which is why we offer styles for every body.
+                        </p>
+                    </div>
+                </div>
+                <div class="row-span-3">
+                    <img src="images/shopping.png" alt="">
+                </div>
+                <div class="bg-white shadow-md flex items-center p-3 rounded-xl">
+                    <img class="w-20 h-20" src="images/box.png" alt="">
+                    <div class="ml-6">
+                        <h3 class="text-indigo-900 text-2xl font-semibold">Free Exchanges</h3>
+                        <p class="text-gray-700">
+                            One of the many reasons you can shop with peace of mind.
+                        </p>
+                    </div>
+                </div>
+                <div class="bg-white shadow-md flex p-3 items-center rounded-xl">
+                    <img class="w-20 h-20" src="images/question.png" alt="">
+                    <div class="ml-6">
+                        <h3 class="text-indigo-900 text-2xl font-semibold">Contact Our Seller</h3>
+                        <p class="text-gray-700">
+                            They are here to help you. That's quite literally what we pay them for.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
