--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
 
         <!-- offer -->
 
-        <section class="my-20">
-            <div class="grid grid-cols-2 gap-8">
-                <div class="bg-white shadow-md flex p-3 items-center rounded-xl">
+        <section class="my-20 p-2">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                <div class="bg-white shadow-md flex p-3 items-center rounded-xl order-2 md:order-1">
                     <img class="w-20 h-20" src="images/house.png" alt="">
                     <div class="ml-6">
                         <h3 class="text-indigo-900 text-2xl font-semibold">Find the Perfect Fit</h3>
@@ -167,10 +167,10 @@
                         </p>
                     </div>
                 </div>
-                <div class="row-span-3">
+                <div class="row-span-3 order-1 md:order-2">
                     <img src="images/shopping.png" alt="">
                 </div>
-                <div class="bg-white shadow-md flex items-center p-3 rounded-xl">
+                <div class="bg-white shadow-md flex items-center p-3 rounded-xl order-3 md:order-3">
                     <img class="w-20 h-20" src="images/box.png" alt="">
                     <div class="ml-6">
                         <h3 class="text-indigo-900 text-2xl font-semibold">Free Exchanges</h3>
@@ -179,7 +179,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="bg-white shadow-md flex p-3 items-center rounded-xl">
+                <div class="bg-white shadow-md flex p-3 items-center rounded-xl order-4 md:order-4">
                     <img class="w-20 h-20" src="images/question.png" alt="">
                     <div class="ml-6">
                         <h3 class="text-indigo-900 text-2xl font-semibold">Contact Our Seller</h3>
